--- a/tasks/install_ppg13_tools.yml
+++ b/tasks/install_ppg13_tools.yml
@@ -49,6 +49,7 @@
         - libevent-dev
         - pandoc
         - m4
+        - automake
     when: ansible_os_family == "Debian"
 
   - name: Install pgaudit Debian
