--- a/tasks/install_ppg13_tools.yml
+++ b/tasks/install_ppg13_tools.yml
@@ -50,6 +50,10 @@
         - pandoc
         - m4
         - automake
+        - pkg-config
+        - openssl-dev
+        - readline-dev
+        - build-essential
     when: ansible_os_family == "Debian"
 
   - name: Install pgaudit Debian
