--- a/tasks/install_ppg13_tools.yml
+++ b/tasks/install_ppg13_tools.yml
@@ -36,7 +36,7 @@
         - perl-JSON-XS
         - libtool
         - make
-    when: ansible_os_family == "RedHat" ansible_distribution_major_version|int <= 7
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int <= 7
 
   - name: Install additional packages RPM
     yum:
@@ -56,7 +56,7 @@
         - perl-JSON-XS
         - libtool
         - make
-    when: ansible_os_family == "RedHat" ansible_distribution_major_version|int == 8
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int == 8
 
   - name: Install additional packages Debian
     apt:
