Add testsimple module for centos8

--- a/tasks/install_ppg13_tools.yml
+++ b/tasks/install_ppg13_tools.yml
@@ -55,6 +55,7 @@
         - perl-Pod-Checker
         - perl-devel
         - perl-JSON-XS
+        - perl-Test-Simple
         - libtool
         - make
         - pandoc
