Delete duplicated code

--- a/playbooks/prepare.yml
+++ b/playbooks/prepare.yml
@@ -90,3 +90,63 @@
         - wget
         - git-all
       when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int == 8
+
+    - name: Install additional packages RPM
+      yum:
+        name: "{{ packages }}"
+        state: latest
+        update_cache: yes
+      vars:
+        packages:
+          - openssl-devel
+          - readline-devel
+          - gcc
+          - gcc-c++
+          - libevent-devel
+          - perl-Pod-Checker
+          - perl-devel
+          - perl-JSON-XS
+          - libtool
+          - make
+          - pandoc
+      when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int <= 7
+
+    - name: Install additional packages RPM
+      yum:
+        name: "{{ packages }}"
+        state: latest
+        enablerepo: powertools
+        update_cache: yes
+      vars:
+        packages:
+          - openssl-devel
+          - readline-devel
+          - gcc
+          - gcc-c++
+          - libevent-devel
+          - perl-Pod-Checker
+          - perl-devel
+          - perl-JSON-XS
+          - perl-Test-Simple
+          - libtool
+          - make
+          - pandoc
+      when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int == 8
+
+    - name: Install additional packages Debian
+      apt:
+        name: "{{ packages }}"
+        state: latest
+        update_cache: yes
+      vars:
+        packages:
+          - libtool
+          - libevent-dev
+          - m4
+          - automake
+          - pkg-config
+          - libssl-dev
+          - libreadline-dev
+          - build-essential
+          - pandoc
+      when: ansible_os_family == "Debian"
