--- a/tasks/install_ppg12_tools.yml
+++ b/tasks/install_ppg12_tools.yml
@@ -290,6 +290,18 @@
       update: yes
     become_user: postgres
 
+  - name: Autogen pgbouncer
+    shell: ./autogen.sh
+    args:
+      chdir: /tmp/pgbouncer
+    become_user: postgres
+
+  - name: Configure pgbouncer
+    shell: ./configure --prefix=/usr/local
+    args:
+      chdir: /tmp/pgbouncer
+    become_user: postgres
+
   - name: Clone wal2json sources
     git:
       repo: https://github.com/eulerto/wal2json.git
