--- a/playbooks/prepare.yml
+++ b/playbooks/prepare.yml
@@ -107,6 +107,7 @@
           - perl-devel
           - perl-JSON-XS
           - libtool
+          - openssl
           - make
           - pandoc
       when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int <= 7
@@ -121,6 +122,7 @@
         packages:
           - openssl-devel
           - readline-devel
+          - openssl
           - gcc
           - gcc-c++
           - libevent-devel
