--- a/tasks/install_ppg12_tools.yml
+++ b/tasks/install_ppg12_tools.yml
@@ -232,13 +232,13 @@
   - name: Add extensions to postgresql.conf for Debian
     lineinfile:
       path: /etc/postgresql/12/main/postgresql.conf
-      line: shared_preload_libraries = 'pg_stat_monitor, pgaudit'
+      line: shared_preload_libraries = 'pg_stat_monitor, pgaudit, set_user'
     when: ansible_os_family == "Debian"
 
   - name: Add extensions to postgresql.conf for RHEL
     lineinfile:
       path: /var/lib/pgsql/12/data/postgresql.conf
-      line: shared_preload_libraries = 'pg_stat_monitor, pgaudit'
+      line: shared_preload_libraries = 'pg_stat_monitor, pgaudit, set_user'
     when: ansible_os_family == "RedHat"
 
   - name: Clone pgaudit sources
