--- a/tasks/install_ppg11_tools.yml
+++ b/tasks/install_ppg11_tools.yml
@@ -37,74 +37,74 @@
         - percona-pg-stat-monitor11-dbgsym
     when: ansible_os_family == "Debian"
 
-#  - name: Install pgbadger RHEL
-#    yum:
-#      name: percona-pgbadger
-#      state: latest
-#      update_cache: yes
-#    when: ansible_os_family == "RedHat"
-#
-#  - name: Install pgbadger Debian
-#    apt:
-#      name: percona-pgbadger
-#      state: latest
-#      update_cache: yes
-#    when: ansible_os_family == "Debian"
-#
-#  - name: Install percona-pgaudit11_set_user RHEL
-#    yum:
-#      name: percona-pgaudit11_set_user
-#      state: latest
-#      update_cache: yes
-#    when: ansible_os_family == "RedHat"
-#
-#  - name: Install percona-pgaudit12_set_user Debian
-#    apt:
-#      name: "{{ packages }}"
-#      state: latest
-#      update_cache: yes
-#    vars:
-#      packages:
-#        - percona-pgaudit11-set-user
-#        - percona-pgaudit11-set-user-dbgsym
-#    when: ansible_os_family == "Debian"
-#
-#
-#  - name: Install percona-pgbouncer RHEL
-#    yum:
-#      name: percona-pgbouncer
-#      state: latest
-#      update_cache: yes
-#    when: ansible_os_family == "RedHat"
-#
-#  - name: Install percona-pgbouncer Debian
-#    apt:
-#      name: "{{ packages }}"
-#      state: latest
-#      update_cache: yes
-#    vars:
-#      packages:
-#        - percona-pgbouncer
-#        - percona-pgbouncer-dbgsym
-#    when: ansible_os_family == "Debian"
-#
-#  - name: Install percona-wal2json12 RHEL
-#    yum:
-#      name: percona-wal2json11
-#      state: latest
-#      update_cache: yes
-#    when: ansible_os_family == "RedHat"
-#
-#  - name: Install percona-wal2json13 Debian
-#    apt:
-#      name: "{{ packages }}"
-#      state: latest
-#      update_cache: yes
-#    vars:
-#      packages:
-#        - percona-postgresql-11-wal2json
-#        - percona-postgresql-11-wal2json-dbgsym
-#    when: ansible_os_family == "Debian"
+  - name: Install pgbadger RHEL
+    yum:
+      name: percona-pgbadger
+      state: latest
+      update_cache: yes
+    when: ansible_os_family == "RedHat"
+
+  - name: Install pgbadger Debian
+    apt:
+      name: percona-pgbadger
+      state: latest
+      update_cache: yes
+    when: ansible_os_family == "Debian"
+
+  - name: Install percona-pgaudit11_set_user RHEL
+    yum:
+      name: percona-pgaudit11_set_user
+      state: latest
+      update_cache: yes
+    when: ansible_os_family == "RedHat"
+
+  - name: Install percona-pgaudit12_set_user Debian
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-pgaudit11-set-user
+        - percona-pgaudit11-set-user-dbgsym
+    when: ansible_os_family == "Debian"
+
+
+  - name: Install percona-pgbouncer RHEL
+    yum:
+      name: percona-pgbouncer
+      state: latest
+      update_cache: yes
+    when: ansible_os_family == "RedHat"
+
+  - name: Install percona-pgbouncer Debian
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-pgbouncer
+        - percona-pgbouncer-dbgsym
+    when: ansible_os_family == "Debian"
+
+  - name: Install percona-wal2json12 RHEL
+    yum:
+      name: percona-wal2json11
+      state: latest
+      update_cache: yes
+    when: ansible_os_family == "RedHat"
+
+  - name: Install percona-wal2json13 Debian
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-postgresql-11-wal2json
+        - percona-postgresql-11-wal2json-dbgsym
+    when: ansible_os_family == "Debian"
 
   - name: Add extensions to postgresql.conf for Debian
     lineinfile:
