--- a/tasks/install_ppg11_tools.yml
+++ b/tasks/install_ppg11_tools.yml
@@ -260,7 +260,7 @@
   - name: Clone pgaudit sources
     git:
       repo: https://github.com/pgaudit/pgaudit.git
-      version: REL_11_STABLE
+      version: 1.3.2
       dest: /tmp/pg_audit
     become_user: postgres
 
