--- a/pgbackrest/ppg-13/tasks/main.yml
+++ b/pgbackrest/ppg-13/tasks/main.yml
@@ -73,7 +73,8 @@
 - debug: var=gcc.stdout_lines
 
 - name: Clone pgbackrest sources
-  become: postgres
+  become: yes
+  become_user: postgres
   git:
     repo: "{{ repo }}"
     version: "{{ version }}"
