Add pgbackrest ppg11 and ppg12 tests

--- a/pgbackrest/ppg-13/tasks/main.yml
+++ b/pgbackrest/ppg-13/tasks/main.yml
@@ -61,6 +61,8 @@
     - percona-postgresql-server-dev-all
   when: ansible_os_family == "Debian"
 
+- name: Install PPG tools
+  include_tasks: ../../../../tasks/install_ppg13_tools.yml
 
 - shell: gcc --version
   register: gcc
