Add etcd for list of packages

--- a/tasks/install_ppg11.yml
+++ b/tasks/install_ppg11.yml
@@ -90,6 +90,7 @@
       update_cache: yes
     vars:
       packages:
+        - etcd
         - percona-postgresql-client-common
         - percona-postgresql-common
         - percona-postgresql-server-dev-all
