--- a/tasks/install_ppg13.yml
+++ b/tasks/install_ppg13.yml
@@ -74,6 +74,16 @@
       - percona-postgresql13-debuginfo
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "7"
 
+  - name: install etcd for RHEL 8
+    yum:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+      - etcd
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+
   - name: DNF clean RHEL
     command: sudo dnf module disable postgresql -y
     when: ansible_distribution == "RedHat"
