--- a/tasks/install_ppg12.yml
+++ b/tasks/install_ppg12.yml
@@ -115,3 +115,10 @@
         - percona-postgresql12-server-debuginfo
         - percona-postgresql12-test-debuginfo
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+
+  - name: Restart Postgres RHEL
+    service:
+      name: etcd
+      state: restarted
+      enabled: yes
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
