--- a/tasks/install_ppg11.yml
+++ b/tasks/install_ppg11.yml
@@ -119,3 +119,10 @@
         - percona-postgresql11-server-debuginfo
         - percona-postgresql11-test-debuginfo
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+
+  - name: Restart Postgres RHEL
+    service:
+      name: etcd
+      state: restarted
+      enabled: yes
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
