--- a/tasks/install_ppg12.yml
+++ b/tasks/install_ppg12.yml
@@ -79,6 +79,11 @@
     command: sudo dnf module disable postgresql -y
     when: ansible_distribution == "RedHat"
 
+  - name: Disable llvm-toolset dnf module for RHEL8
+    become: true
+    command: dnf module disable llvm-toolset -y
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+
   - name: install Percona Platform for PostgreSQL rpm packages for RHEL
     yum:
       name: "{{ packages }}"
