Add python-etcd package

--- a/tasks/install_ppg12.yml
+++ b/tasks/install_ppg12.yml
@@ -92,6 +92,7 @@
     vars:
       packages:
         - etcd
+        - python3-python-etcd
         - percona-postgresql-client-common
         - percona-postgresql-common
         - percona-postgresql-server-dev-all
