--- a/tasks/install_ppg11.yml
+++ b/tasks/install_ppg11.yml
@@ -96,6 +96,7 @@
     vars:
       packages:
         - etcd
+        - python3-python-etcd
         - percona-postgresql-client-common
         - percona-postgresql-common
         - percona-postgresql-server-dev-all
