--- a/tasks/install_ppg13.yml
+++ b/tasks/install_ppg13.yml
@@ -87,6 +87,7 @@
     vars:
       packages:
       - etcd
+      - python3-python-etcd
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
   - name: Restart Postgres RHEL
