--- a/tasks/install_ppg11.yml
+++ b/tasks/install_ppg11.yml
@@ -1,4 +1,10 @@
 # This task installs Percona Platform for PostgreSQL on CentOS and Debian/Ubuntu
+  - name: setup epel release
+    yum:
+      name: epel-release
+      update_cache: yes
+      state: present
+    when: ansible_os_family == "RedHat"
 
   - name: Clean dnf RHEL8
     become: true
