--- a/tasks/install_ppg11.yml
+++ b/tasks/install_ppg11.yml
@@ -132,7 +132,7 @@
         - percona-postgresql11-test-debuginfo
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
-  - name: Restart Postgres RHEL
+  - name: Restart ETCD RHEL
     service:
       name: etcd
       state: restarted
