--- a/patroni/ppg-13/tasks/main.yml
+++ b/patroni/ppg-13/tasks/main.yml
@@ -57,13 +57,37 @@
     path: /etc/patroni
     state: directory
 
+- name: Create /etc/patroni directory
+  file:
+    path: /var/lib/pgsql/patroni_test/
+    state: directory
+    owner: postgres
+    group: postgres
+
 - name: Copy postgresql.yml for patroni service
   copy:
-    src: postgresql.yml
+    src: postgresql0.yml
     dest: /etc/patroni/postgresql.yml
     owner: root
     group: root
     mode: 0644
+
+- name: Copy postgresql1.yml for patroni service
+  copy:
+    src: postgresql1.yml
+    dest: /var/lib/pgsql/patroni_test/postgresql1.yml
+    owner: postgres
+    group: postgres
+    mode: 0644
+
+- name: Copy postgresql2.yml for patroni service
+  copy:
+    src: postgresql2.yml
+    dest: /var/lib/pgsql/patroni_test/postgresql2.yml
+    owner: postgres
+    group: postgres
+    mode: 0644
+
 
 - name: Start etcd
   service:
@@ -77,6 +101,14 @@
     state: started
     enabled: yes
 
+- name: Start patroni postgresql1 from shell
+  shell: patroni patroni_test/postgres1.yml &
+  become_user: postgres
+
+- name: Start patroni postgresql1 from shell
+  shell: patroni patroni_test/postgres2.yml &
+  become_user: postgres
+
 - name: Copy haproxy.cfg
   copy:
     src: haproxy.cfg
@@ -86,4 +118,4 @@
     mode: 0644
 
 - name: Start haproxy
-  command: haproxy -f /etc/haproxy/haproxy-test.cfg &
+  shell: haproxy -f /etc/haproxy/haproxy-test.cfg &
