--- a/patroni/ppg-12/files/postgresql1.yml
+++ b/patroni/ppg-12/files/postgresql1.yml
@@ -93,10 +93,10 @@ bootstrap:
 postgresql:
   listen: 127.0.0.1:5433
   connect_address: 127.0.0.1:5433
-  data_dir: /tmp/data/postgresql1
-  bin_dir: bin_dir: /usr/pgsql-12/bin/
-  #  config_dir:
-  pgpass: /tmp/pgpass1
+  data_dir: /var/lib/pgsql/patroni_test/data/postgresql1
+  bin_dir: /usr/pgsql-12/bin/
+#  config_dir:
+  pgpass: /var/lib/pgsql/patroni_test/pgpass1
   authentication:
     replication:
       username: replicator
