--- a/patroni/ppg-11/files/postgresql0.yml
+++ b/patroni/ppg-11/files/postgresql0.yml
@@ -1,15 +1,15 @@
 scope: batman
 #namespace: /service/
-name: postgresql2
+name: postgresql0
 
 restapi:
-  listen: 127.0.0.1:8010
-  connect_address: 127.0.0.1:8010
+  listen: 127.0.0.1:8008
+  connect_address: 127.0.0.1:8008
 #  certfile: /etc/ssl/certs/ssl-cert-snakeoil.pem
 #  keyfile: /etc/ssl/private/ssl-cert-snakeoil.key
-  authentication:
-    username: username
-    password: password
+#  authentication:
+#    username: username
+#    password: password
 
 # ctl:
 #   insecure: false # Allow connections to SSL sites without certs
@@ -32,10 +32,10 @@ etcd:
 
 #raft:
 #  data_dir: .
-#  self_addr: 127.0.0.1:2224
+#  self_addr: 127.0.0.1:2222
 #  partner_addrs:
-#  - 127.0.0.1:2222
 #  - 127.0.0.1:2223
+#  - 127.0.0.1:2224
 
 bootstrap:
   # this section will be written into Etcd:/<namespace>/<scope>/config after initializing new cluster
@@ -45,6 +45,12 @@ bootstrap:
     loop_wait: 10
     retry_timeout: 10
     maximum_lag_on_failover: 1048576
+#    master_start_timeout: 300
+#    synchronous_mode: false
+    #standby_cluster:
+      #host: 127.0.0.1
+      #port: 1111
+      #primary_slot_name: patroni
     postgresql:
       use_pg_rewind: true
 #      use_slots: true
@@ -79,6 +85,9 @@ bootstrap:
   - host all all 0.0.0.0/0 md5
 #  - hostssl all all 0.0.0.0/0 md5
 
+  # Additional script to be launched after initial cluster creation (will be passed the connection URL as parameter)
+# post_init: /usr/local/bin/setup_cluster.sh
+
   # Some additional users users which needs to be created after initializing new cluster
   users:
     admin:
@@ -88,12 +97,12 @@ bootstrap:
         - createdb
 
 postgresql:
-  listen: 127.0.0.1:5434
-  connect_address: 127.0.0.1:5434
-  data_dir: /var/lib/pgsql/patroni_test/postgresql2
-  bin_dir: /usr/pgsql-12/bin/
+  listen: 127.0.0.1:5432
+  connect_address: 127.0.0.1:5432
+  data_dir: /tmp/data/postgresql0
+  bin_dir: /usr/pgsql-11/bin/
 #  config_dir:
-  pgpass: /var/lib/pgsql/patroni_test/pgpass2
+  pgpass: /tmp/pgpass0
   authentication:
     replication:
       username: replicator
@@ -109,10 +118,18 @@ postgresql:
   parameters:
     # Fully qualified kerberos ticket file for the running user
     # same as KRB5CCNAME used by the GSS
-#    krb_server_keyfile: /var/spool/keytabs/postgres
+#   krb_server_keyfile: /var/spool/keytabs/postgres
     unix_socket_directories: '.'
+  # Additional fencing script executed after acquiring the leader lock but before promoting the replica
+  #pre_promote: /path/to/pre_promote.sh
+
+#watchdog:
+#  mode: automatic # Allowed values: off, automatic, required
+#  device: /dev/watchdog
+#  safety_margin: 5
+
 tags:
     nofailover: false
     noloadbalance: false
     clonefrom: false
-    replicatefrom: postgres1
+    nosync: false
