--- a/patroni/ppg-11/files/postgresql1.yml
+++ b/patroni/ppg-11/files/postgresql1.yml
@@ -1,15 +1,15 @@
 scope: batman
 #namespace: /service/
-name: postgresql2
+name: postgresql1
 
 restapi:
-  listen: 127.0.0.1:8010
-  connect_address: 127.0.0.1:8010
+  listen: 127.0.0.1:8009
+  connect_address: 127.0.0.1:8009
 #  certfile: /etc/ssl/certs/ssl-cert-snakeoil.pem
 #  keyfile: /etc/ssl/private/ssl-cert-snakeoil.key
-  authentication:
-    username: username
-    password: password
+#  authentication:
+#    username: username
+#    password: password
 
 # ctl:
 #   insecure: false # Allow connections to SSL sites without certs
@@ -32,10 +32,10 @@ etcd:
 
 #raft:
 #  data_dir: .
-#  self_addr: 127.0.0.1:2224
+#  self_addr: 127.0.0.1:2223
 #  partner_addrs:
 #  - 127.0.0.1:2222
-#  - 127.0.0.1:2223
+#  - 127.0.0.1:2224
 
 bootstrap:
   # this section will be written into Etcd:/<namespace>/<scope>/config after initializing new cluster
@@ -79,6 +79,9 @@ bootstrap:
   - host all all 0.0.0.0/0 md5
 #  - hostssl all all 0.0.0.0/0 md5
 
+  # Additional script to be launched after initial cluster creation (will be passed the connection URL as parameter)
+# post_init: /usr/local/bin/setup_cluster.sh
+
   # Some additional users users which needs to be created after initializing new cluster
   users:
     admin:
@@ -88,12 +91,12 @@ bootstrap:
         - createdb
 
 postgresql:
-  listen: 127.0.0.1:5434
-  connect_address: 127.0.0.1:5434
-  data_dir: /var/lib/pgsql/patroni_test/postgresql2
-  bin_dir: /usr/pgsql-12/bin/
+  listen: 127.0.0.1:5433
+  connect_address: 127.0.0.1:5433
+  data_dir: /var/lib/pgsql/patroni_test/data/postgresql1
+  bin_dir: /usr/pgsql-11/bin/
 #  config_dir:
-  pgpass: /var/lib/pgsql/patroni_test/pgpass2
+  pgpass: /var/lib/pgsql/patroni_test/pgpass1
   authentication:
     replication:
       username: replicator
@@ -111,8 +114,14 @@ postgresql:
     # same as KRB5CCNAME used by the GSS
 #    krb_server_keyfile: /var/spool/keytabs/postgres
     unix_socket_directories: '.'
+  basebackup:
+      - verbose
+      - max-rate: 100M
+#      - waldir: /pg-wal-mount/external-waldir # only needed in case pg_wal is symlinked outside of data_dir
+  # Additional fencing script executed after acquiring the leader lock but before promoting the replica
+  #pre_promote: /path/to/pre_promote.sh
+
 tags:
     nofailover: false
     noloadbalance: false
     clonefrom: false
-    replicatefrom: postgres1
