--- a/patroni/ppg-13/tasks/main.yml
+++ b/patroni/ppg-13/tasks/main.yml
@@ -2,17 +2,14 @@
 - name: Clean dnf RHEL8
   become: true
   command: dnf clean all -y
-  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
 - name: Disable dnf module for RHEL8
   become: true
   command: dnf module disable postgresql -y
-  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
 - name: Disable llvm-toolset dnf module for RHEL8
   become: true
   command: dnf module disable llvm-toolset -y
-  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
 - name: setup epel release
   yum:
@@ -101,14 +98,14 @@
     enabled: yes
 
 - name: Start patroni postgresql1 from shell
-  shell: patroni /var/lib/pgsql/patroni_test/postgres1.yml &
+  shell: patroni /var/lib/pgsql/patroni_test/postgres1.yml >/dev/null 2>&1 &
   become_user: postgres
   register: patroni1
 
 - debug: var=patroni1.stdout_lines
 
 - name: Start patroni postgresql2 from shell
-  shell: patroni /var/lib/pgsql/patroni_test/postgres2.yml &
+  shell: patroni /var/lib/pgsql/patroni_test/postgres2.yml >/dev/null 2>&1 &
   become_user: postgres
   register: patroni2
 
@@ -123,7 +120,7 @@
     mode: 0644
 
 - name: Start haproxy
-  shell: haproxy -f /etc/haproxy/haproxy-test.cfg &
+  shell: haproxy -f /etc/haproxy/haproxy-test.cfg >/dev/null 2>&1 &
   register: haproxy
 
 - debug: var=haproxy.stdout_lines
