--- a/patroni/ppg-13/tasks/main.yml
+++ b/patroni/ppg-13/tasks/main.yml
@@ -98,14 +98,18 @@
     enabled: yes
 
 - name: Start patroni postgresql1 from shell
-  shell: patroni /var/lib/pgsql/patroni_test/postgres1.yml >/dev/null 2>&1 &
+  shell: patroni /var/lib/pgsql/patroni_test/postgres1.yml &
   become_user: postgres
+  async: 45
+  poll: 0
   register: patroni1
 
 - debug: var=patroni1.stdout_lines
 
 - name: Start patroni postgresql2 from shell
-  shell: patroni /var/lib/pgsql/patroni_test/postgres2.yml >/dev/null 2>&1 &
+  shell: patroni /var/lib/pgsql/patroni_test/postgres2.yml &
+  async: 45
+  poll: 0
   become_user: postgres
   register: patroni2
 
@@ -120,7 +124,9 @@
     mode: 0644
 
 - name: Start haproxy
-  shell: haproxy -f /etc/haproxy/haproxy-test.cfg >/dev/null 2>&1 &
+  shell: haproxy -f /etc/haproxy/haproxy-test.cfg &
+  async: 45
+  poll: 0
   register: haproxy
 
 - debug: var=haproxy.stdout_lines
