--- a/patroni/ppg-13/tasks/main.yml
+++ b/patroni/ppg-13/tasks/main.yml
@@ -134,8 +134,4 @@
     mode: 0644
 
 - name: Start haproxy
-  service:
-    name: haproxy
-    state: started
-    enabled: yes
-
+  shell: haproxy -f  /etc/haproxy/haproxy.cfg -D
