--- a/tasks/install_ppg12_tools.yml
+++ b/tasks/install_ppg12_tools.yml
@@ -375,3 +375,21 @@
       name: patroni
       state: started
       enabled: yes
+
+  - name: install etcd for RHEL 8
+    yum:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+      - etcd
+      - python3-python-etcd
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+
+  - name: Restart etcd RHEL
+    service:
+      name: etcd
+      state: restarted
+      enabled: yes
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
