--- a/tasks/install_ppg13_tools.yml
+++ b/tasks/install_ppg13_tools.yml
@@ -41,7 +41,6 @@
       path: /etc/pgbackrest/
       state: directory
 
-
   - name: Create pgbackrest configuration Debian
     blockinfile:
       path: /etc/pgbackrest/pgbackrest.conf
@@ -68,7 +67,6 @@
         pg1-port=5432
     when: ansible_os_family == "RedHat"
 
-
   - name: Configure backup config for Debian
     blockinfile:
       path: /etc/postgresql/13/main/postgresql.conf
@@ -88,7 +86,6 @@
         max_wal_senders = 10
         wal_level = logical
     when: ansible_os_family == "RedHat"
-
 
   - name: Restart Postgres RHEL
     service:
@@ -193,7 +190,6 @@
         - percona-pgaudit13-set-user-dbgsym
     when: ansible_os_family == "Debian"
 
-
   - name: Install percona-pgbouncer RHEL
     yum:
       name: percona-pgbouncer
@@ -211,7 +207,6 @@
         - percona-pgbouncer
         - percona-pgbouncer-dbgsym
     when: ansible_os_family == "Debian"
-
 
   - name: Install percona-wal2json13 RHEL
     yum:
@@ -269,7 +264,6 @@
       path: /var/lib/pgsql/13/data/pg_hba.conf
       state: absent
     when: ansible_os_family == "RedHat"
-
 
   - name: Remove pg_hba.conf debian
     file:
@@ -372,8 +366,215 @@
       PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
     when: ansible_os_family == "Debian"
 
-  - name: Start Postgres RHEL
+  - name: Start patroni
     service:
       name: patroni
       state: started
       enabled: yes
+
+  - name: install etcd for RHEL 8
+    yum:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+      - etcd
+      - python3-python-etcd
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+
+  - name: Restart etcd RHEL
+    service:
+      name: etcd
+      state: restarted
+      enabled: yes
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+
+  - name: Install patroni related packages RHEL
+    yum:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+      - etcd
+      - python-etcd
+      - python3-etcd
+      - haproxy
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version != "8"
+
+  - name: Install patroni related packages Debian
+    yum:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - etcd
+        - python3-python-etcd
+        - haproxy
+    when: ansible_os_family == "Debian"
+
+  - name: Create /etc/patroni directory
+    file:
+      path: /etc/patroni
+      state: directory
+
+  - name: Create test patroni directory RHEL
+    file:
+      path: /var/lib/pgsql/patroni_test/
+      state: directory
+      owner: postgres
+      group: postgres
+    when: ansible_os_family == "RedHat"
+
+  - name: Create test patroni directory Debian
+    file:
+      path: /var/lib/postgresql/patroni_test/
+      state: directory
+      owner: postgres
+      group: postgres
+    when: ansible_os_family == "Debian"
+
+  - name: Copy postgresql0.yml for patroni service Debian
+    copy:
+      src: postgresql0_deb.yml
+      dest: /var/lib/postgresql/patroni_test/postgresql0.yml
+      owner: postgres
+      group: postgres
+      mode: 0644
+    when: ansible_os_family == "Debian"
+
+  - name: Copy postgresql1.yml for patroni service Debian
+    copy:
+      src: postgresql1_deb.yml
+      dest: /var/lib/postgresql/patroni_test/postgresql1.yml
+      owner: postgres
+      group: postgres
+      mode: 0644
+    when: ansible_os_family == "Debian"
+
+  - name: Copy postgresql2.yml for patroni service Debian
+    copy:
+      src: postgresql2_deb.yml
+      dest: /var/lib/postgresql/patroni_test/postgresql2.yml
+      owner: postgres
+      group: postgres
+      mode: 0644
+    when: ansible_os_family == "Debian"
+
+  - name: Copy postgresql0.yml for patroni service RHEL
+    copy:
+      src: postgresql0.yml
+      dest: /var/lib/pgsql/patroni_test/postgresql0.yml
+      owner: postgres
+      group: postgres
+      mode: 0644
+    when: ansible_os_family == "RedHat"
+
+  - name: Copy postgresql1.yml for patroni service RHEL
+    copy:
+      src: postgresql1.yml
+      dest: /var/lib/pgsql/patroni_test/postgresql1.yml
+      owner: postgres
+      group: postgres
+      mode: 0644
+    when: ansible_os_family == "RedHat"
+
+  - name: Copy postgresql2.yml for patroni service RHEL
+    copy:
+      src: postgresql2.yml
+      dest: /var/lib/pgsql/patroni_test/postgresql2.yml
+      owner: postgres
+      group: postgres
+      mode: 0644
+    when: ansible_os_family == "RedHat"
+
+  - name: Copy patroni0 service file Debian
+    copy:
+      src: patroni0_deb.service
+      dest: /lib/systemd/system/patroni0.service
+      owner: root
+      group: root
+      mode: 0644
+    when: ansible_os_family == "Debian"
+
+  - name: Copy patroni1 service file Debian
+    copy:
+      src: patroni1_deb.service
+      dest: /lib/systemd/system/patroni1.service
+      owner: root
+      group: root
+      mode: 0644
+    when: ansible_os_family == "Debian"
+
+  - name: Copy patroni2 service file Debian
+    copy:
+      src: patroni2_deb.service
+      dest: /lib/systemd/system/patroni2.service
+      owner: root
+      group: root
+      mode: 0644
+    when: ansible_os_family == "Debian"
+
+  - name: Copy patroni0 service file RHEL
+    copy:
+      src: patroni0.service
+      dest: /usr/lib/systemd/system/patroni0.service
+      owner: root
+      group: root
+      mode: 0644
+    when: ansible_os_family == "RedHat"
+
+  - name: Copy patroni1 service file RHEL
+    copy:
+      src: patroni1.service
+      dest: /usr/lib/systemd/system/patroni1.service
+      owner: root
+      group: root
+      mode: 0644
+    when: ansible_os_family == "RedHat"
+
+  - name: Copy patroni2 service file RHEL
+    copy:
+      src: patroni2.service
+      dest: /usr/lib/systemd/system/patroni2.service
+      owner: root
+      group: root
+      mode: 0644
+    when: ansible_os_family == "RedHat"
+
+  - name: Start etcd
+    service:
+      name: etcd
+      state: started
+      enabled: yes
+
+  - name: Start patroni0
+    service:
+      name: patroni0
+      state: started
+      enabled: yes
+
+  - name: Start patroni1
+    service:
+      name: patroni1
+      state: started
+      enabled: yes
+
+  - name: Start patroni2
+    service:
+      name: patroni2
+      state: started
+      enabled: yes
+
+  - name: Copy haproxy.cfg
+    copy:
+      src: haproxy.cfg
+      dest: /etc/haproxy/haproxy.cfg
+      owner: root
+      group: root
+      mode: 0644
+
+  - name: Start haproxy
+    shell: haproxy -f  /etc/haproxy/haproxy.cfg -D
