--- a/tasks/install_ppg13_tools.yml
+++ b/tasks/install_ppg13_tools.yml
@@ -318,26 +318,56 @@
       dest: /tmp/set_user
     become_user: postgres
 
-  - name: Clone pgbouncer sources
+  - name: Clone pgbouncer sources RHEL
     git:
       repo: https://github.com/pgbouncer/pgbouncer.git
       version: pgbouncer_1_15_0
-      dest: /tmp/pgbouncer
+      dest: /var/lib/pgsql/
       recursive: yes
       update: yes
     become_user: postgres
+    when: ansible_os_family == "RedHat"
 
-  - name: Autogen pgbouncer
+  - name: Autogen pgbouncer RHEL
     shell: ./autogen.sh
     args:
-      chdir: /tmp/pgbouncer
+      chdir: /var/lib/pgsql/
     become_user: postgres
+    when: ansible_os_family == "RedHat"
 
-  - name: Configure pgbouncer
+  - name: Configure pgbouncer RHEL
     shell: ./configure --prefix=/usr/local
     args:
-      chdir: /tmp/pgbouncer
+      chdir: /var/lib/pgsql/
     become_user: postgres
+    when: ansible_os_family == "RedHat"
+
+
+  - name: Clone pgbouncer sources Debian
+    git:
+      repo: https://github.com/pgbouncer/pgbouncer.git
+      version: pgbouncer_1_15_0
+      dest: /var/lib/postgresql/pgbouncer
+      recursive: yes
+      update: yes
+    become_user: postgres
+    when: ansible_os_family == "Debian"
+
+  - name: Autogen pgbouncer Debian
+    shell: ./autogen.sh
+    args:
+      chdir: /var/lib/postgresql/pgbouncer
+    become_user: postgres
+    when: ansible_os_family == "Debian"
+
+
+  - name: Configure pgbouncer Debian
+    shell: ./configure --prefix=/usr/local
+    args:
+      chdir: /var/lib/postgresql/pgbouncer
+    become_user: postgres
+    when: ansible_os_family == "Debian"
+
 
   - name: Clone wal2json sources
     git:
@@ -350,7 +380,7 @@
     git:
       repo: https://github.com/pgbackrest/pgbackrest.git
       version: release/2.32
-      dest:  /var/lib/postgresql//pgbackrest
+      dest:  /var/lib/postgresql/pgbackrest
     become_user: postgres
     when: ansible_os_family == "Debian"
 
@@ -358,7 +388,7 @@
     git:
       repo: https://github.com/pgbackrest/pgbackrest.git
       version: release/2.32
-      dest:  /var/lib/postgresql//pgbackrest
+      dest:  /var/lib/postgresql/pgbackrest
     become_user: postgres
     when: ansible_os_family == "RedHat"
 
